# libCompareFolders

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  README.md  cxx_flag_overrides.cmake
include/: CompareFolders.hpp  Exceptions.hpp
src/: CCollectionHash.cpp  CCollectionHash.hpp  CFactoryHashes.cpp  CFactoryHashes.hpp  CompareFolders.cpp  Exceptions.hpp  Utilities.cpp  main.cpp
src/apps/common/: CLogger.hpp
src/apps/compare_folders/: main.cpp
src/apps/scan_folder/: main.cpp
src/lib/: CCollectionHash.cpp  CCollectionHash.hpp  CCollectionInfo.cpp  CCollectionInfo.hpp  CFactoryHashes.cpp  CFactoryHashes.hpp  CFactoryInfo.cpp  CFactoryInfo.hpp  CLoggerConcurrent.hpp  CProxyLogger.hpp  CompareFolders.cpp  TDequeConcurrent.hpp  Utilities.cpp
test/: CMakeLists.txt
test/src/: main.cpp  test.cpp  test_library.cpp  test_library.hpp  test_messaging.cpp
